@@ -241,6 +241,7 @@
 					<member>Bryce L. Nordgren</member>
 					<member>Carl Anderson</member>
 					<member>Charlie Savage</member>
+					<member>Chris Mayo</member>
 					<member>Christian Schroeder</member>
 					<member>Christoph Berg</member>
 					<member>Christoph Moench-Tegeder</member>
