@@ -46,6 +46,8 @@ To take advantage of all SFCGAL featurs, SFCGAL 1.5.0+ is needed.
   - #5543, allow building without documentation (Sandro Santilli)
   - #5596, GH-749, Allow promoting column as an id
           in ST_AsGeoJson(record,..). (Jan Tojnar)
+  - GH-744, Don't create docbook.css for the HTML manual,
+            use style.css instead (Chris Mayo)
 
 
 PostGIS 3.4.0
